Line numbers example

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -94,3 +94,20 @@
     </codeblock>
   </div>
 </example>
+
+<h3>Line numbers</h3>
+<p>Line numbers are on by default, bind the value <code>false</code> to the property <code>lineNumbers</code> to remove them.</p>
+<example>
+  <div code>
+    <codeblock language="markup" theme="okaidia">
+      &lt;codeblock [lineNumbers]="false">
+        No Line numbers
+      &lt;/codeblock>
+    </codeblock>
+  </div>
+  <div highlighted>
+    <codeblock [lineNumbers]="false">
+      No line numbers
+    </codeblock>
+  </div>
+</example>
