--- a/app/app.component.html
+++ b/app/app.component.html
@@ -144,8 +144,7 @@
   class="solo"></codeblock>
 
 <h3>HTML</h3>
-<p>Use the <code>markup</code> language for HTML.</p>
-<p>If you use standard HTML tags, and carefully close each one, you can write it as normal inside a <code>codeblock</code>.</p>
+<p>Use the <code>markup</code> language for HTML. If you use standard tags, and carefully close each one, you can write it as normal inside a <code>codeblock</code>.</p>
 <example>
   <div code>
     <codeblock language="markup" theme="okaidia">
@@ -161,12 +160,53 @@
   </div>
   <div highlighted>
     <codeblock language="markup">
-      <ul class="favorites">
-        <li>These are</li>
-        <li>a few of</li>
-        <li>my favorite</li>
-        <li>things.</li>
-      </ul>
+      &lt;ul class="favorites">
+        &lt;li>These are&lt;/li>
+        &lt;li>a few of&lt;/li>
+        &lt;li>my favorite&lt;/li>
+        &lt;li>things.&lt;/li>
+      &lt;/ul>
+    </codeblock>
+  </div>
+</example>
+<p>If you want to write a fragment of `HTML` with some unmatched tags the angular interpreter is going to fail to load your template. You must change any opening or closing tag angle brackets, <code><</code>, to the html entity version <code>&#38;lt;</code>.</p>
+<example>
+  <div code>
+    <codeblock language="markup" theme="okaidia">
+      &lt;codeblock language="markup">
+        &#38;lt;html>
+          &#38;lt;head>
+          &#38;lt;title>Title&#38;lt;/title>
+          ...
+      &lt;/codeblock>
+    </codeblock>
+  </div>
+  <div highlighted>
+    <codeblock language="markup">
+      &lt;html>
+        &lt;head>
+        &lt;title>Title&lt;/title>
+        ...
+    </codeblock>
+  </div>
+</example>
+<p>Dynamically loaded files do not have this limitation.</p>
+<p>Any Angular2 Components that manipulate the DOM, such as a <code>codeblock</code> or an <code>ngIf</code>, should also be escaped.</p>
+<example>
+  <div code>
+    <codeblock language="markup" theme="okaidia">
+      &lt;codeblock language="markup">
+        &#38;lt;div *ngIf="true" >A&#38;lt;/div>
+        &#38;lt;div *ngIf="false">B&#38;lt;/div>
+      &lt;/codeblock>
+    </codeblock>
+  </div>
+  <div highlighted>
+    <codeblock language="markup">
+      &lt;codeblock language="markup">
+        &lt;div *ngIf="true" >A&lt;/div>
+        &lt;div *ngIf="false">B&lt;/div>
+      &lt;/codeblock>
     </codeblock>
   </div>
 </example>
