--- a/app/app.component.css
+++ b/app/app.component.css
@@ -17,6 +17,11 @@ select {
   font-size: 1.3rem;
 }
 
+.info {
+  text-align: center;
+  margin-top: 1.33em;
+}
+
 .theme-name {
   margin-bottom: 0; text-align:center; font-size: 1.4rem;
 }
