Remove width size change on solo codeblock because it was expanding past the width of the main container

--- a/app/assets/base.css
+++ b/app/assets/base.css
@@ -36,12 +36,11 @@ footer {
 }
 
 .solo .codeblock {
-  width: 100%;
   padding: 0 20px;
   margin: 0 auto;
 }
 
-
+/*
 // ::-webkit-scrollbar {
 //     -webkit-appearance: none;
 //     width: 7px;
@@ -51,6 +50,7 @@ footer {
 //     background-color: rgba(0,0,0,.5);
 //     -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 // }
+*/
 
 .subtitle {
   margin-left: 1.0rem;
