Add language to line numbers example to prevent spacing issues

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -146,7 +146,7 @@
       </codeblock>
     </div>
     <div highlighted>
-      <codeblock [lineNumbers]="false">
+      <codeblock language="bash" [lineNumbers]="false">
         No line numbers
       </codeblock>
     </div>
