--- a/app/assets/base.css
+++ b/app/assets/base.css
@@ -128,6 +128,10 @@ footer .identicon {
   top: -4px;
 }
 
+.fa-heart {
+  color: #EB051C;
+}
+
 /*******************
   Spinner
 *******************/
