Title case heading

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -173,7 +173,7 @@
   </ul>
 </section>
 <section class="feature">
-  <h3>Line numbers</h3>
+  <h3>Line Numbers</h3>
   <p>Line numbers are on by default, bind the value <code>false</code> to the property <code>lineNumbers</code> to remove them.</p>
   <example>
     <div code>
